--- a/app/Jenkinsfile
+++ b/app/Jenkinsfile
@@ -24,7 +24,7 @@ pipeline {
         stage("Build") {
             steps {
                 script {
-
+                    echo "here we build the app"
                 }
             }
         }
@@ -32,7 +32,7 @@ pipeline {
         stage("Deploy") {
             steps {
                 script {
-
+                    echo "here we deploy the app"
                 }
             }
         }
