--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,10 @@ services:
           # WINDOWS ONLY, we need to run root otherwise we cannot access 'host.docker.internal'
           RUN_AS: "root"
     ports:
+        # The jenkins web app
         - "${JENKINS_PORT}:8080"
+        # The jenkins jnlp agent listener
+        - "50000:50000"
     environment:
         - "TZ=Europe/Vienna"
         # Plugin download could fail because of timeouts, so increase it
@@ -16,7 +19,8 @@ services:
         # JAV_OPTS for Jenkins
         - "JAVA_OPTS=-Djenkins.install.runSetupWizard=false -Djava.util.logging.config.file=/usr/share/jenkins/ref/logging.properties"
         # Used by jenkins CASC and docker-compose.yml
-        - "DOCKER_HOST_URI=${DOCKER_HOST_URI}"
+        - "DOCKER_HOST=${DOCKER_HOST_URI}"
+        - "JNLP_JENKIS_URL=${JNLP_JENKIS_URL}"
         - "RUN_AS=${RUN_AS}"
         - "JENKINS_ADMIN_PASSWORD=${JENKINS_ADMIN_PASSWORD}"
         - "GITHUB_USERNAME=${GITHUB_USERNAME}"
@@ -28,5 +32,6 @@ services:
         - ../jenkins-config/casc:/usr/share/jenkins/ref/config
         # Map logging configuration in container
         - ../jenkins-config/logging.properties:/usr/share/jenkins/ref/logging.properties:ro
+    privileged: true
 volumes:
     jenkins-data:
