--- a/jenkins-config/casc/01_jenkins.yml
+++ b/jenkins-config/casc/01_jenkins.yml
@@ -1,4 +1,8 @@
 jenkins:
+    agentProtocols:
+        - "JNLP4-connect"
+        - "Ping"
+    slaveAgentPort: 50000
     numExecutors: 5
     scmCheckoutRetryCount: 2
     mode: NORMAL
@@ -14,7 +18,26 @@ jenkins:
             name: "docker"
             dockerApi: 
                 dockerHost:
-                    uri: "${DOCKER_HOST_URI}"
+                    uri: "${DOCKER_HOST}"
+            templates:
+                - connector:
+                    jnlp:
+                        user: "root"
+                        jenkinsUrl: "${JNLP_JENKIS_URL}"
+                        jnlpLauncher:
+                            workDirSettings:
+                                disabled: false
+                                failIfWorkDirIsMissing: false
+                                internalDir: "remoting"
+                  dockerTemplateBase:
+                        image: "jenkins/inbound-agent:4.3-4-jdk11"
+                        user: "root"
+                  instanceCapStr: "5"
+                  labelString: "docker-agent"
+                  mode: EXCLUSIVE
+                  name: "docker-agent"
+                  pullTimeout: 300
+                  remoteFs: "/home/jenkins"
 unclassified: 
     location:
         url: "http://localhost:${JENKINS_PORT}"
