--- a/app/pom.xml
+++ b/app/pom.xml
@@ -14,7 +14,7 @@
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven-war-plugin.version>3.2.3</maven-war-plugin.version>
         <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
-
+        <maven-deploy-plugin.version>3.0.0-M1</maven-deploy-plugin.version>
         <quarkus.version>1.3.2.Final</quarkus.version>
 
         <revision>0.0.1</revision>
@@ -97,6 +97,10 @@
             <plugin>
                 <artifactId>maven-clean-plugin</artifactId>
                 <version>${maven-clean-plugin.version}</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven-deploy-plugin.version}</version>
             </plugin>
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
