--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     nexus:
         image: "sonatype/nexus3:3.23.0"
         ports:
-            - "9081:8081"
+            - "${NEXUS_PORT}:8081"
         environment:
             - "INSTALL4J_ADD_VM_PARAMS=-Xms2g -Xmx2g -XX:MaxDirectMemorySize=2g"
         volumes:
