--- a/docker/jenkins/Dockerfile
+++ b/docker/jenkins/Dockerfile
@@ -12,8 +12,8 @@ USER root
 
 ADD plugins.txt /usr/share/jenkins/ref/
 
-RUN curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - \
-    && curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add - \
+RUN curl -sL https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key add - \
+    && curl -sL https://download.docker.com/linux/debian/gpg | apt-key add - \
     && echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | tee -a /etc/apt/sources.list.d/kubernetes.list \
     && echo "deb [arch=amd64] https://download.docker.com/linux/debian buster stable" | tee -a /etc/apt/sources.list.d/docker.list \
     && apt-get update \
